📈 going back home resets timer

--- a/app/src/main/res/drawable/circular_progress_grey.xml
+++ b/app/src/main/res/drawable/circular_progress_grey.xml
@@ -5,7 +5,7 @@
             android:innerRadius="2.7dp"
             android:shape="ring"
             android:thicknessRatio="50.0"
-            android:useLevel="true">
+            android:useLevel="false">
             <solid android:color="#d4dee7"/>
 
         </shape>
