--- a/app/src/main/res/layout/dialog_custom_back_confirmation.xml
+++ b/app/src/main/res/layout/dialog_custom_back_confirmation.xml
@@ -32,7 +32,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/tvYes"
+            android:id="@+id/btnYes"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="10dp"
@@ -43,7 +43,7 @@
             android:textColor="#ffffff"
             android:textSize="16sp" />
         <Button
-            android:id="@+id/tvNo"
+            android:id="@+id/btnNo"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="10dp"
